--- a/index.html
+++ b/index.html
@@ -152,263 +152,10 @@
       </div>
     </div>
 
-    <script>
-      async function loadUnitEntry() {
-        try {
-          const res = await fetch(
-            "https://msk-dashboard-production.up.railway.app/api/total-entry"
-          );
-          const data = await res.json();
-
-          const total = data.total_entry;
-          let displayValue = "";
-
-          if (total >= 1000) {
-            // ribuan (Rb) dengan 1 desimal
-            const ribuan = total / 1000;
-            displayValue =
-              ribuan.toLocaleString("id-ID", {
-                minimumFractionDigits: 1,
-                maximumFractionDigits: 1,
-              }) + " Rb";
-          } else {
-            // ratusan / puluhan → tampilkan langsung
-            displayValue = total.toLocaleString("id-ID");
-          }
-
-          document.getElementById("unitEntryValue").innerText = displayValue;
-        } catch (err) {
-          console.error("Gagal load total entry:", err);
-          document.getElementById("unitEntryValue").innerText = "-";
-        }
-      }
-
-      loadUnitEntry();
-    </script>
+    <script src="dashboard.js"></script>
 
     <script>
-      function formatSmartNumber(value) {
-        const abs = Math.abs(value);
-
-        if (abs >= 1_000_000_000_000) {
-          return (
-            (value / 1_000_000_000_000).toLocaleString("id-ID", {
-              minimumFractionDigits: 2,
-              maximumFractionDigits: 2,
-            }) + " T"
-          );
-        }
-
-        if (abs >= 1_000_000_000) {
-          return (
-            (value / 1_000_000_000).toLocaleString("id-ID", {
-              minimumFractionDigits: 2,
-              maximumFractionDigits: 2,
-            }) + " M"
-          );
-        }
-
-        if (abs >= 1_000_000) {
-          return (
-            (value / 1_000_000).toLocaleString("id-ID", {
-              minimumFractionDigits: 2,
-              maximumFractionDigits: 2,
-            }) + " Jt"
-          );
-        }
-
-        if (abs >= 1_000) {
-          return (
-            (value / 1_000).toLocaleString("id-ID", {
-              minimumFractionDigits: 1,
-              maximumFractionDigits: 1,
-            }) + " Rb"
-          );
-        }
-
-        return value.toLocaleString("id-ID");
-      }
-
-      async function loadTotalAmount() {
-        try {
-          const res = await fetch(
-            "https://msk-dashboard-production.up.railway.app/api/total-amount"
-          );
-          const data = await res.json();
-
-          const total = data.total_amount;
-
-          document.getElementById("totalAmountValue").innerText =
-            formatSmartNumber(total);
-        } catch (err) {
-          console.error("Gagal load total amount:", err);
-          document.getElementById("totalAmountValue").innerText = "-";
-        }
-      }
-
-      loadTotalAmount();
-    </script>
-
-    <script>
-      async function loadGenderPie() {
-        try {
-          const res = await fetch(
-            "https://msk-dashboard-production.up.railway.app/api/gender"
-          );
-          const data = await res.json();
-
-          new ApexCharts(document.querySelector("#genderPie"), {
-            chart: {
-              type: "pie",
-              height: 260,
-              toolbar: {
-                show: true,
-                tools: {
-                  download: true,
-                },
-              },
-            },
-            labels: ["Laki-Laki", "Perempuan"],
-            series: [data.persenlk, data.persenpr],
-            legend: {
-              position: "bottom",
-            },
-            tooltip: {
-              y: {
-                formatter: (val) => val.toLocaleString("id-ID"),
-              },
-            },
-            dataLabels: {
-              formatter: function (val, opts) {
-                return opts.w.config.series[opts.seriesIndex].toLocaleString(
-                  "id-ID"
-                );
-              },
-            },
-          }).render();
-        } catch (err) {
-          console.error("Gagal load gender pie:", err);
-        }
-      }
-
-      loadGenderPie();
-    </script>
-
-    <script>
-      async function loadMotorBar() {
-        try {
-          const res = await fetch(
-            "https://msk-dashboard-production.up.railway.app/api/type-motor"
-          );
-          const data = await res.json();
-
-          // mapping API -> ApexCharts
-          const categories = data.map((item) => item.type);
-          const seriesData = data.map((item) => item.total);
-
-          new ApexCharts(document.querySelector("#motorBar"), {
-            chart: {
-              type: "bar",
-              height: 260,
-              toolbar: {
-                show: true,
-                tools: {
-                  download: true,
-                },
-              },
-            },
-            plotOptions: {
-              bar: {
-                horizontal: true,
-                barHeight: "70%",
-              },
-            },
-            dataLabels: {
-              enabled: false,
-            },
-            series: [
-              {
-                name: "Unit",
-                data: seriesData,
-              },
-            ],
-            xaxis: {
-              categories: categories,
-            },
-            tooltip: {
-              y: {
-                formatter: (val) => val.toLocaleString("id-ID"),
-              },
-            },
-          }).render();
-        } catch (err) {
-          console.error("Gagal load type motor:", err);
-        }
-      }
-
-      loadMotorBar();
-    </script>
-
-    <script>
-      async function loadJobBar() {
-        try {
-          const res = await fetch(
-            "https://msk-dashboard-production.up.railway.app/api/pekerjaan"
-          );
-          const data = await res.json();
-
-          // mapping API -> ApexCharts
-          const categories = data.map((item) => item.pekerjaan);
-          const seriesData = data.map((item) => item.total);
-
-          new ApexCharts(document.querySelector("#jobBar"), {
-            chart: {
-              type: "bar",
-              height: 260,
-              toolbar: {
-                show: true,
-                tools: {
-                  download: true,
-                },
-              },
-            },
-            plotOptions: {
-              bar: {
-                horizontal: true,
-                barHeight: "55%",
-              },
-            },
-            dataLabels: {
-              enabled: true,
-              formatter: (val) => val.toLocaleString("id-ID"),
-            },
-            series: [
-              {
-                name: "Jumlah",
-                data: seriesData,
-              },
-            ],
-            xaxis: {
-              categories: categories,
-            },
-            tooltip: {
-              y: {
-                formatter: (val) => val.toLocaleString("id-ID"),
-              },
-            },
-          }).render();
-        } catch (err) {
-          console.error("Gagal load pekerjaan:", err);
-        }
-      }
-
-      loadJobBar();
-    </script>
-
-    <script>
-      /* ======================
-   TOJ BAR
-====================== */
+      /* ====================== TOJ BAR ====================== */
       new ApexCharts(document.querySelector("#tojBar"), {
         chart: {
           type: "bar",
@@ -443,14 +190,6 @@
           ],
         },
       }).render();
-
-      /* ======================
-   TYPE MOTOR
-====================== */
-
-      /* ======================
-   PEKERJAAN
-====================== */
     </script>
   </body>
 </html>
